@@ -52,6 +52,10 @@ $args {META_MERGE} {build_requires} ||= {
     %{$args {META_MERGE} {test_requires}}
 };
 
+$args {META_MERGE} {configure_requires} ||=
+       $args {META_MERGE} {build_requires};
+
+
 my %filter = (
     MIN_PERL_VERSION     => '6.48',
     LICENSE              => '6.48',
